--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         
     </div>
 
+<hr>
+    <div>
+        <p>FOOTER</p>
+    </div>
+
 
     <script src="public/index.js"></script>
 </body>
