huge problem with a 426 error unsolvable unless a different API is used : (

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         
 
         <div class="buttonDiv flex flex-row">
-            <button>Home</button>
-            <button>News</button>
-            <button>Github</button>
+            <a href="#LP"><button>Home</button></a>
+            <a href="#main"><button>News</button></a>
+            <a href="https://github.com/gamerfunky78" target="_blank"><button>Github</button></a>
         </div>
         
         <img src="public/assets/MENU.png" alt="" id="MENU">
